[package]
name = "dog-breed-ab-test-warp"
version = "0.2.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "multipart", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1"
futures-util = "0.3"
futures = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
